--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -284,9 +284,10 @@
       "source": [
         "# copy lat / lon to main data\n",
         "old_len = len(d)\n",
-        "d = d.join(locs, rsuffix='CULL')\n",
+        "# d = d.join(locs, rsuffix='CULL')\n",
+        "d = d.join(locs.loc[:, ['LatitudeMeasure', 'LongitudeMeasure']])\n",
         "assert len(d) == old_len\n",
-        "d.drop(columns=[i for i in d.columns if 'CULL' in i], inplace=True)\n",
+        "# d.drop(columns=[i for i in d.columns if 'CULL' in i], inplace=True)\n",
         "d.head()"
       ],
       "execution_count": 0,
