Running ok now?  Or count is low? (66)

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -123,7 +123,6 @@
       "metadata": {
         "id": "gOM5hZUYCYxe",
         "colab_type": "code",
-        "collapsed": true,
         "colab": {}
       },
       "source": [
@@ -284,11 +283,11 @@
       "source": [
         "# copy lat / lon to main data\n",
         "old_len = len(d)\n",
-        "# d = d.join(locs, rsuffix='CULL')\n",
-        "d = d.join(locs.loc[:, ['LatitudeMeasure', 'LongitudeMeasure']])\n",
+        "locs.reset_index(inplace=True, drop=True)\n",
+        "d = d.merge(locs.loc[:, [common, 'LatitudeMeasure', 'LongitudeMeasure']], on=[common])\n",
         "assert len(d) == old_len\n",
-        "# d.drop(columns=[i for i in d.columns if 'CULL' in i], inplace=True)\n",
-        "d.head()"
+        "assert sum(d['LatitudeMeasure']==0)==0\n",
+        "assert sum(np.isnan(d['LatitudeMeasure']))==0"
       ],
       "execution_count": 0,
       "outputs": []
@@ -324,7 +323,8 @@
         "d['lat'] = dd['LatitudeMeasureMEAN'].values\n",
         "d['lon'] = dd['LongitudeMeasureMEAN'].values\n",
         "d['site'] = np.round(d['lat'],4).astype(str) + np.round(d['lon'], 4).astype(str)\n",
-        "assert len(d) == old_len"
+        "assert len(d) == old_len\n",
+        "assert len(dd) == old_len"
       ],
       "execution_count": 0,
       "outputs": []
@@ -347,17 +347,34 @@
         "colab": {}
       },
       "source": [
-        "d.set_index(['LatitudeMeasure', 'LongitudeMeasure'], inplace=True, drop=False)\n",
-        "locs = locs.join(d, on=['LatitudeMeasure', 'LongitudeMeasure'], rsuffix='CULL')\n",
-        "for col in [i for i in locs.columns if 'CULL' in i]:\n",
-        "    locs.drop(columns=col, inplace=True)\n",
-        "locs.drop_duplicates(inplace=True, subset=['site', 'MonitoringLocationIdentifier'])\n",
-        "locs.to_csv(\"locs.csv\", index=False)\n",
-        "offset = max((locs['lat']-locs['LatitudeMeasure']).abs())\n",
+        "nlocs = locs.merge(d.loc[:, [common, 'LatitudeMeasure', 'LongitudeMeasure', 'lat', 'lon', 'site']], on=[common, 'LatitudeMeasure', 'LongitudeMeasure'])\n",
+        "locs_len = len(nlocs)\n",
+        "nlocs.drop_duplicates(inplace=True, subset=['site', 'MonitoringLocationIdentifier'])\n",
+        "offset = max((nlocs['lat']-nlocs['LatitudeMeasure']).abs())\n",
         "assert offset < 0.001, offset\n",
-        "assert len(locs) == length, (length, len(locs))\n",
-        "locs.to_csv(\"locs.csv\")\n",
+        "assert len(nlocs) == length, (length, len(nlocs))\n",
+        "\n",
+        "locs = nlocs\n",
+        "locs.to_csv(\"locs.csv\", index=False)\n",
+        "\n",
         "offset"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mOItpESyYXtI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for na in '', 'nan', 'NaN':\n",
+        "    assert sum(locs['site'] == na) == 0, na\n",
+        "    assert sum(d['site'] == na) == 0, na\n",
+        "    assert sum(locs['site'] == na+na) == 0, na\n",
+        "    assert sum(d['site'] == na+na) == 0, na"
       ],
       "execution_count": 0,
       "outputs": []
@@ -516,6 +533,13 @@
       "source": [
         "data = pd.read_csv(\"data.csv\", low_memory=False)\n",
         "pdata = data.loc[:, ['sampling', 'site']]\n",
+        "for na in '', 'nan', 'NaN':\n",
+        "    assert sum(locs['site'] == na) == 0, na\n",
+        "    assert sum(d['site'] == na) == 0, na\n",
+        "    assert sum(pdata['site'] == na) == 0, na\n",
+        "    assert sum(locs['site'] == na+na) == 0, na\n",
+        "    assert sum(d['site'] == na+na) == 0, na\n",
+        "    assert sum(pdata['site'] == na+na) == 0, na\n",
         "pdata.drop_duplicates(subset=['sampling'], inplace=True)\n",
         "pdata_len = len(pdata)\n",
         "print(\"%d into %d\" % (len(data), pdata_len))\n",
@@ -639,6 +663,9 @@
         "# update locs with the number of obs. for each site\n",
         "count = pdata.groupby(by=['site']).count().iloc[:, 0]\n",
         "count.columns = ['count']\n",
+        "count.head(n=20)\n",
+        "pdata.head(30)\n",
+        "len(count)\n",
         "locs = locs.join(count, on='site')\n",
         "locs.to_csv(\"locs.csv\")"
       ],
