fixing column names

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -661,12 +661,15 @@
       },
       "source": [
         "# update locs with the number of obs. for each site\n",
-        "count = pdata.groupby(by=['site']).count().iloc[:, 0]\n",
-        "count.columns = ['count']\n",
+        "count = pdata.groupby(by=['site']).count()\n",
+        "count.rename(columns={count.columns[0]:'count'}, inplace=True)\n",
+        "assert 'count' in count.columns\n",
         "count.head(n=20)\n",
         "pdata.head(30)\n",
         "len(count)\n",
-        "locs = locs.join(count, on='site')\n",
+        "count.reset_index(inplace=True)\n",
+        "locs = locs.merge(count.loc[:, ['site', 'count']], on='site', how='left') /here\n",
+        "assert 'count' in locs.columns\n",
         "locs.to_csv(\"locs.csv\")"
       ],
       "execution_count": 0,
