--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -259,6 +259,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "slZiwqvqJuHz",
+        "colab_type": "code",
+        "colab": {},
+        "collapsed": true
+      },
+      "source": [
+        "d.groupby(common).count().sort_values(d.columns[0])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "UlnI67nVGmFe",
         "colab_type": "code",
         "colab": {}
@@ -532,7 +546,7 @@
       },
       "source": [
         "data = pd.read_csv(\"data.csv\", low_memory=False)\n",
-        "pdata = data.loc[:, ['sampling', 'site']]\n",
+        "pdata = data.loc[:, ['sampling', 'ActivityStartDate', 'ActivityEndDate', 'site']]\n",
         "for na in '', 'nan', 'NaN':\n",
         "    assert sum(locs['site'] == na) == 0, na\n",
         "    assert sum(d['site'] == na) == 0, na\n",
@@ -653,6 +667,34 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TJs7_I32Arpu",
+        "colab_type": "text"
+      },
+      "source": [
+        "Of 22,000 sampling events sampling either flow or P, we can't find flow *and* P for 4700.  Most (~3600) of the missing data is flow, so we *could* fill in with flow data, not doing that currently."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wFkcKBc9QdZJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def merge(left, right, on, cols):\n",
+        "    for col in cols:\n",
+        "        if col in left.columns:\n",
+        "            left = left.drop(columns=col)\n",
+        "    right = right.reset_index()\n",
+        "    return left.merge(right[on+cols], on=on, how='left')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "I_kz258y4_mY",
@@ -663,13 +705,17 @@
         "# update locs with the number of obs. for each site\n",
         "count = pdata.groupby(by=['site']).count()\n",
         "count.rename(columns={count.columns[0]:'count'}, inplace=True)\n",
-        "assert 'count' in count.columns\n",
-        "count.head(n=20)\n",
-        "pdata.head(30)\n",
-        "len(count)\n",
-        "count.reset_index(inplace=True)\n",
-        "locs = locs.merge(count.loc[:, ['site', 'count']], on='site', how='left') /here\n",
-        "assert 'count' in locs.columns\n",
+        "locs = merge(locs, count, ['site'], ['count'])\n",
+        "\n",
+        "# as above for min/max date\n",
+        "count = pdata.groupby(by=['site']).min()\n",
+        "locs = merge(locs, count, ['site'], ['ActivityStartDate'])\n",
+        "locs.rename(columns={'ActivityStartDate': 'StartDate'}, inplace=True)\n",
+        "count = pdata.groupby(by=['site']).max()\n",
+        "# yes, use ActivityStartDate both times\n",
+        "locs = merge(locs, count, ['site'], ['ActivityStartDate'])\n",
+        "locs.rename(columns={'ActivityStartDate': 'EndDate'}, inplace=True)\n",
+        "\n",
         "locs.to_csv(\"locs.csv\")"
       ],
       "execution_count": 0,
