using buffer to merge sites

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -81,8 +81,14 @@
         "colab": {}
       },
       "source": [
+        "!apt-get install libspatialindex-dev python3-rtree\n",
+        "!pip install geopandas\n",
+        "!ldconfig\n",
+        "from rtree import index\n",
+        "from rtree.index import Rtree\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "import geopandas\n",
         "from collections import namedtuple\n",
         "from dateutil.parser import parse"
       ],
@@ -300,8 +306,8 @@
         "locs.reset_index(inplace=True, drop=True)\n",
         "d = d.merge(locs.loc[:, [common, 'LatitudeMeasure', 'LongitudeMeasure']], on=[common])\n",
         "assert len(d) == old_len\n",
-        "assert sum(d['LatitudeMeasure']==0)==0\n",
-        "assert sum(np.isnan(d['LatitudeMeasure']))==0"
+        "assert sum(d.LatitudeMeasure == 0) == 0\n",
+        "assert sum(np.isnan(d.LatitudeMeasure)) == 0"
       ],
       "execution_count": 0,
       "outputs": []
@@ -325,7 +331,28 @@
       },
       "source": [
         "# generate a location based site field\n",
-        "dd = d.copy(deep=False)\n",
+        "lonlat = d[['LongitudeMeasure', 'LatitudeMeasure']].drop_duplicates()\n",
+        "dd = geopandas.GeoDataFrame(\n",
+        "    lonlat,\n",
+        "    geometry=geopandas.points_from_xy(lonlat.LongitudeMeasure, lonlat.LatitudeMeasure),\n",
+        "    crs = {'init' :'epsg:4326'},\n",
+        ")\n",
+        "dd['site'] = dd.LatitudeMeasure.astype(str)+dd.LongitudeMeasure.astype(str)\n",
+        "dd.drop(columns=['LongitudeMeasure', 'LatitudeMeasure'], inplace=True)\n",
+        "dd.geometry = dd.geometry.to_crs(5071).buffer(20)\n",
+        "intersect = geopandas.overlay(dd, dd, how='identity')\n",
+        "lint = len(intersect)\n",
+        "intersect = intersect[intersect.site_2.astype(str) != 'nan']\n",
+        "print(\"Dropped %d NaN intersections\" % (lint-len(intersect)))\n",
+        "sets = {}\n",
+        "for inter in intersect.itertuples():\n",
+        "    site_1 = str(inter.site_1)\n",
+        "    site_2 = str(inter.site_2)\n",
+        "    sets.setdefault(site_1, set()).add(site_2)\n",
+        "    sets.setdefault(site_2, set()).add(site_1)\n",
+        "sites = {min(i):i for i in sets.values()}\n",
+        "[{k:v} for k,v in sites.items() if len(v) > 1]\n",
+        "len(lonlat), len(sites)\n",
         "# round lat lon to snap nearby points together\n",
         "dd['_lat'] = np.round(dd['LatitudeMeasure'], 3)\n",
         "dd['_lon'] = np.round(dd['LongitudeMeasure'], 3)\n",
