working on site renaming

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -337,7 +337,9 @@
         "    geometry=geopandas.points_from_xy(lonlat.LongitudeMeasure, lonlat.LatitudeMeasure),\n",
         "    crs = {'init' :'epsg:4326'},\n",
         ")\n",
-        "dd['site'] = dd.LatitudeMeasure.astype(str)+dd.LongitudeMeasure.astype(str)\n",
+        "# dd['site'] = dd.LatitudeMeasure.astype(str)+dd.LongitudeMeasure.astype(str)\n",
+        "dd['site'] = [(i,j) for i, j in zip(dd.LatitudeMeasure, dd.LongitudeMeasure)]\n",
+        "/here this just turns them into strings anyway\n",
         "dd.drop(columns=['LongitudeMeasure', 'LatitudeMeasure'], inplace=True)\n",
         "dd.geometry = dd.geometry.to_crs(5071).buffer(20)\n",
         "intersect = geopandas.overlay(dd, dd, how='identity')\n",
@@ -351,8 +353,26 @@
         "    sets.setdefault(site_1, set()).add(site_2)\n",
         "    sets.setdefault(site_2, set()).add(site_1)\n",
         "sites = {min(i):i for i in sets.values()}\n",
+        "# sites = {(k+\"_X\" if len(v) > 1 else k):v for k, v in sites.items()}\n",
         "[{k:v} for k,v in sites.items() if len(v) > 1]\n",
         "len(lonlat), len(sites)\n",
+        "site = {}\n",
+        "xtra = {}\n",
+        "for k, v in sites.items():\n",
+        "    for s in v:\n",
+        "        site[s] = k\n",
+        "        xtra[s] = len(v) > 1\n",
+        "\n",
+        "lu = d.loc[:, ['LongitudeMeasure', 'LatitudeMeasure']]\n",
+        "lu = merge(lu, d, ['LongitudeMeasure', 'LatitudeMeasure'], [common])\n",
+        "lu['sitehash'] = lu.LatitudeMeasure.astype(str)+lu.LongitudeMeasure.astype(str)\n",
+        "lu = lu.     \n",
+        "lu['site'] = [\n",
+        "    site\n",
+        "    row.MonitoringLocationIdentifier + \n",
+        "    ('_X' if '_X' \n",
+        "\n",
+        "\n",
         "# round lat lon to snap nearby points together\n",
         "dd['_lat'] = np.round(dd['LatitudeMeasure'], 3)\n",
         "dd['_lon'] = np.round(dd['LongitudeMeasure'], 3)\n",
@@ -365,7 +385,8 @@
         "d['lon'] = dd['LongitudeMeasureMEAN'].values\n",
         "d['site'] = np.round(d['lat'],4).astype(str) + np.round(d['lon'], 4).astype(str)\n",
         "assert len(d) == old_len\n",
-        "assert len(dd) == old_len"
+        "assert len(dd) == old_len\n",
+        "     "
       ],
       "execution_count": 0,
       "outputs": []
