closer on site renaming

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -26,13 +26,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "NW-Jh5er5kCq",
-        "colab_type": "code",
-        "colab": {}
+        "colab_type": "text"
       },
       "source": [
+        "```python\n",
         "# Install the PyDrive wrapper & import libraries.\n",
         "# This only needs to be done once per notebook.\n",
         "!pip install -U -q PyDrive\n",
@@ -47,10 +47,8 @@
         "gauth = GoogleAuth()\n",
         "gauth.credentials = GoogleCredentials.get_application_default()\n",
         "drive = GoogleDrive(gauth)\n",
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "```"
+      ]
     },
     {
       "cell_type": "code",
@@ -91,6 +89,24 @@
         "import geopandas\n",
         "from collections import namedtuple\n",
         "from dateutil.parser import parse"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J3E2_7srZVvJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def merge(left, right, on, cols):\n",
+        "    for col in cols:\n",
+        "        if col in left.columns:\n",
+        "            left = left.drop(columns=col)\n",
+        "    right = right.reset_index()\n",
+        "    return left.merge(right[on+cols], on=on, how='left')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -267,8 +283,7 @@
       "metadata": {
         "id": "slZiwqvqJuHz",
         "colab_type": "code",
-        "colab": {},
-        "collapsed": true
+        "colab": {}
       },
       "source": [
         "d.groupby(common).count().sort_values(d.columns[0])"
@@ -334,24 +349,27 @@
         "lonlat = d[['LongitudeMeasure', 'LatitudeMeasure']].drop_duplicates()\n",
         "dd = geopandas.GeoDataFrame(\n",
         "    lonlat,\n",
-        "    geometry=geopandas.points_from_xy(lonlat.LongitudeMeasure, lonlat.LatitudeMeasure),\n",
+        "    geometry=geopandas.points_from_xy(\n",
+        "        lonlat.LongitudeMeasure, lonlat.LatitudeMeasure\n",
+        "    ),\n",
         "    crs = {'init' :'epsg:4326'},\n",
         ")\n",
-        "# dd['site'] = dd.LatitudeMeasure.astype(str)+dd.LongitudeMeasure.astype(str)\n",
-        "dd['site'] = [(i,j) for i, j in zip(dd.LatitudeMeasure, dd.LongitudeMeasure)]\n",
-        "/here this just turns them into strings anyway\n",
+        "dd['site'] = dd.LatitudeMeasure.astype(str)+dd.LongitudeMeasure.astype(str)\n",
         "dd.drop(columns=['LongitudeMeasure', 'LatitudeMeasure'], inplace=True)\n",
         "dd.geometry = dd.geometry.to_crs(5071).buffer(20)\n",
         "intersect = geopandas.overlay(dd, dd, how='identity')\n",
         "lint = len(intersect)\n",
         "intersect = intersect[intersect.site_2.astype(str) != 'nan']\n",
         "print(\"Dropped %d NaN intersections\" % (lint-len(intersect)))\n",
+        "\n",
+        "# make a dict of site: (set of intersecting sites)\n",
         "sets = {}\n",
         "for inter in intersect.itertuples():\n",
         "    site_1 = str(inter.site_1)\n",
         "    site_2 = str(inter.site_2)\n",
         "    sets.setdefault(site_1, set()).add(site_2)\n",
         "    sets.setdefault(site_2, set()).add(site_1)\n",
+        "# pick the lowest (alphabetically) site as the name for intersecting sites\n",
         "sites = {min(i):i for i in sets.values()}\n",
         "# sites = {(k+\"_X\" if len(v) > 1 else k):v for k, v in sites.items()}\n",
         "[{k:v} for k,v in sites.items() if len(v) > 1]\n",
@@ -363,30 +381,16 @@
         "        site[s] = k\n",
         "        xtra[s] = len(v) > 1\n",
         "\n",
-        "lu = d.loc[:, ['LongitudeMeasure', 'LatitudeMeasure']]\n",
-        "lu = merge(lu, d, ['LongitudeMeasure', 'LatitudeMeasure'], [common])\n",
+        "lu = d.loc[:, ['LongitudeMeasure', 'LatitudeMeasure', common]].drop_duplicates(\n",
+        "    subset=['LongitudeMeasure', 'LatitudeMeasure'])\n",
+        "#X lu = merge(lu, d, ['LongitudeMeasure', 'LatitudeMeasure'], [common])\n",
         "lu['sitehash'] = lu.LatitudeMeasure.astype(str)+lu.LongitudeMeasure.astype(str)\n",
-        "lu = lu.     \n",
-        "lu['site'] = [\n",
-        "    site\n",
-        "    row.MonitoringLocationIdentifier + \n",
-        "    ('_X' if '_X' \n",
+        "sitename = {k:v for k,v in zip(lu.sitehash, lu[common])}\n",
+        "lu['site'] = [sitename[i]+('_X' if xtra[i] else '') for i in lu.sitehash]\n",
+        "lu.drop_duplicates(inplace=True)\n",
         "\n",
-        "\n",
-        "# round lat lon to snap nearby points together\n",
-        "dd['_lat'] = np.round(dd['LatitudeMeasure'], 3)\n",
-        "dd['_lon'] = np.round(dd['LongitudeMeasure'], 3)\n",
-        "dd.set_index(['_lat', '_lon'], inplace=True)\n",
-        "# use mean of snapped points, same as original for\n",
-        "# points that were all together to start with\n",
-        "mean = dd.groupby(by=['_lat', '_lon']).mean()\n",
-        "dd = dd.join(mean, on=['_lat', '_lon'], rsuffix=\"MEAN\")\n",
-        "d['lat'] = dd['LatitudeMeasureMEAN'].values\n",
-        "d['lon'] = dd['LongitudeMeasureMEAN'].values\n",
-        "d['site'] = np.round(d['lat'],4).astype(str) + np.round(d['lon'], 4).astype(str)\n",
-        "assert len(d) == old_len\n",
-        "assert len(dd) == old_len\n",
-        "     "
+        "d = merge(d, lu, ['LongitudeMeasure', 'LatitudeMeasure'], ['site'])\n",
+        "assert len(d) == old_len, (old_len, len(d))   "
       ],
       "execution_count": 0,
       "outputs": []
@@ -409,17 +413,12 @@
         "colab": {}
       },
       "source": [
-        "nlocs = locs.merge(d.loc[:, [common, 'LatitudeMeasure', 'LongitudeMeasure', 'lat', 'lon', 'site']], on=[common, 'LatitudeMeasure', 'LongitudeMeasure'])\n",
+        "nlocs = merge(locs, d, [common, 'LatitudeMeasure', 'LongitudeMeasure'], ['site'])\n",
         "locs_len = len(nlocs)\n",
         "nlocs.drop_duplicates(inplace=True, subset=['site', 'MonitoringLocationIdentifier'])\n",
-        "offset = max((nlocs['lat']-nlocs['LatitudeMeasure']).abs())\n",
-        "assert offset < 0.001, offset\n",
         "assert len(nlocs) == length, (length, len(nlocs))\n",
-        "\n",
         "locs = nlocs\n",
-        "locs.to_csv(\"locs.csv\", index=False)\n",
-        "\n",
-        "offset"
+        "locs.to_csv(\"locs.csv\", index=False)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -450,10 +449,8 @@
       },
       "source": [
         "print(\"%d locations\" % len(locs))\n",
-        "distinct = locs.set_index([\"LatitudeMeasure\", \"LongitudeMeasure\"]).index\n",
-        "print(\"%d distinct\" % len(distinct.unique()))\n",
-        "distinct = locs.set_index([\"lat\", \"lon\"]).index\n",
-        "print(\"%d really distinct\" % len(distinct.unique()))"
+        "distinct = locs.set_index([\"LatitudeMeasure\", \"LongitudeMeasure\"])\n",
+        "print(\"%d distinct\" % len(distinct.index.unique()))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -723,24 +720,6 @@
       "source": [
         "Of 22,000 sampling events sampling either flow or P, we can't find flow *and* P for 4700.  Most (~3600) of the missing data is flow, so we *could* fill in with flow data, not doing that currently."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wFkcKBc9QdZJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def merge(left, right, on, cols):\n",
-        "    for col in cols:\n",
-        "        if col in left.columns:\n",
-        "            left = left.drop(columns=col)\n",
-        "    right = right.reset_index()\n",
-        "    return left.merge(right[on+cols], on=on, how='left')"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
