Site renaming done

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -28,6 +28,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ONOS-z05f6dp",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Setup"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NW-Jh5er5kCq",
         "colab_type": "text"
       },
@@ -129,6 +139,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5Mm-pDqcgB0Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Explore dataset"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -279,17 +299,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "slZiwqvqJuHz",
-        "colab_type": "code",
-        "colab": {}
+        "id": "hnho5UvugVTX",
+        "colab_type": "text"
       },
       "source": [
-        "d.groupby(common).count().sort_values(d.columns[0])"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "# Merge sites"
+      ]
     },
     {
       "cell_type": "code",
@@ -356,7 +373,8 @@
         ")\n",
         "dd['site'] = dd.LatitudeMeasure.astype(str)+dd.LongitudeMeasure.astype(str)\n",
         "dd.drop(columns=['LongitudeMeasure', 'LatitudeMeasure'], inplace=True)\n",
-        "dd.geometry = dd.geometry.to_crs(5071).buffer(20)\n",
+        "# 50 m buffer merges sites within 100 m of each other\n",
+        "dd.geometry = dd.geometry.to_crs(5071).buffer(50)\n",
         "intersect = geopandas.overlay(dd, dd, how='identity')\n",
         "lint = len(intersect)\n",
         "intersect = intersect[intersect.site_2.astype(str) != 'nan']\n",
@@ -386,7 +404,7 @@
         "#X lu = merge(lu, d, ['LongitudeMeasure', 'LatitudeMeasure'], [common])\n",
         "lu['sitehash'] = lu.LatitudeMeasure.astype(str)+lu.LongitudeMeasure.astype(str)\n",
         "sitename = {k:v for k,v in zip(lu.sitehash, lu[common])}\n",
-        "lu['site'] = [sitename[i]+('_X' if xtra[i] else '') for i in lu.sitehash]\n",
+        "lu['site'] = [sitename[site[i]]+('_X' if xtra[i] else '') for i in lu.sitehash]\n",
         "lu.drop_duplicates(inplace=True)\n",
         "\n",
         "d = merge(d, lu, ['LongitudeMeasure', 'LatitudeMeasure'], ['site'])\n",
@@ -454,6 +472,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dXRyvPkVghYY",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Data to sampling events"
+      ]
     },
     {
       "cell_type": "code",
@@ -747,6 +775,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FNVpWpYugpiW",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Link to flow data"
+      ]
     },
     {
       "cell_type": "markdown",
