--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -806,13 +807,91 @@
         "colab": {}
       },
       "source": [
-        "d = pd.read_csv(\n",
-        "    \"waterservices.usgs.gov.txt\", sep=r'\\t', comment='#', engine='python'\n",
+        "floc = pd.read_csv(\n",
+        "    \"waterservices.usgs.gov.txt\", sep=r'\\t', comment='#', engine='python', skiprows=[43]\n",
         ")\n",
-        "print(len(d))\n",
-        "d.set_index(['dec_lat_va', 'dec_long_va'], inplace=True, drop=False)\n",
-        "print(len(d.index.unique()))\n",
-        "d.groupby(level=[0, 1]).min().to_csv(\"locs2.csv\")"
+        "print(\"Total\", len(floc))\n",
+        "floc.drop_duplicates(subset=['dec_lat_va', 'dec_long_va', 'agency_cd', 'site_no'], inplace=True)\n",
+        "print(\"Unique\", len(floc))\n",
+        "floc = floc[~np.isnan(floc.dec_lat_va)]\n",
+        "floc = floc[~np.isnan(floc.dec_long_va)]\n",
+        "print(\"Non-null\", len(floc))\n",
+        "floc.to_csv(\"locs2.csv\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SAODZpBXvbOK",
+        "colab_type": "text"
+      },
+      "source": [
+        "The P sampling `locs` have their original lat/lon values, no necessarily consistent within a site.  That's ok, use these for intersect as it will give all possible answers for each site, we can resolve mulitples later."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4UAswFxzwcHd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Plot the Mercury Deposition Network Sites on an Interactive Map\n",
+        "import folium\n",
+        "mdnmap = folium.Map(location=[43.234853, -77.533949], zoom_start=19)\n",
+        "\n",
+        "for row in locs.itertuples():\n",
+        "    folium.Marker([row.LatitudeMeasure, row.LongitudeMeasure], popup=row.site).add_to(mdnmap)\n",
+        "mdnmap\n",
+        "\n",
+        "# ---\n",
+        "locblobs = geopandas.GeoDataFrame(\n",
+        "    locs,\n",
+        "    geometry=geopandas.points_from_xy(\n",
+        "        locs.LongitudeMeasure, locs.LatitudeMeasure\n",
+        "    ),\n",
+        "    crs = {'init' :'epsg:4326'},\n",
+        ")\n",
+        "locblobs.geometry = locblobs.geometry.to_crs(5071).buffer(50)\n",
+        "print(\"From\", len(locblobs), \"locations\")\n",
+        "locblobs = locblobs[~np.isnan(locblobs['count'])]\n",
+        "print(\"Go to\", len(locblobs), \"with P obs.\")\n",
+        "\n",
+        "flocblobs = geopandas.GeoDataFrame(\n",
+        "    floc,\n",
+        "    geometry=geopandas.points_from_xy(\n",
+        "        floc.dec_long_va, floc.dec_lat_va\n",
+        "    ),\n",
+        "    crs = {'init' :'epsg:4326'},\n",
+        ")\n",
+        "flocblobs.geometry = flocblobs.geometry.to_crs(5071).buffer(50)\n",
+        "\n",
+        "intersect = geopandas.overlay(locblobs, flocblobs, how='identity')\n",
+        "\n",
+        "\n",
+        "lint = len(intersect)\n",
+        "intersect = intersect[intersect.site_no.astype(str) != 'nan']\n",
+        "print(\"Dropped %d NaN intersections\" % (lint-len(intersect)))\n",
+        "\n",
+        "# make a dict of site: (set of intersecting sites)\n",
+        "sets = {}\n",
+        "for inter in intersect.itertuples():\n",
+        "    site_1 = str(inter.site)\n",
+        "    site_2 = \"%s-%s\" % (inter.agency_cd, int(inter.site_no))\n",
+        "    sets.setdefault(site_1, set()).add(site_2)\n",
+        "    # sets.setdefault(site_2, set()).add(site_1)\n",
+        "# pick the lowest (alphabetically) site as the name for intersecting sites\n",
+        "# sites = {min(i):i for i in sets.values()}\n",
+        "# sites = {(k+\"_X\" if len(v) > 1 else k):v for k, v in sites.items()}\n",
+        "[{k:v} for k,v in sets.items()  if len(v) > 1]\n",
+        "toget = set()\n",
+        "for flows in sets.values():\n",
+        "    toget.update(flows)\n",
+        "\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
