fetches flow data

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -7,7 +7,6 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +98,8 @@
         "import pandas as pd\n",
         "import geopandas\n",
         "from collections import namedtuple\n",
-        "from dateutil.parser import parse"
+        "from dateutil.parser import parse\n",
+        "import json"
       ],
       "execution_count": 0,
       "outputs": []
@@ -808,7 +808,9 @@
       },
       "source": [
         "floc = pd.read_csv(\n",
-        "    \"waterservices.usgs.gov.txt\", sep=r'\\t', comment='#', engine='python', skiprows=[43]\n",
+        "    \"waterservices.usgs.gov.txt\", sep=r'\\t', comment='#', engine='python', \n",
+        "    skiprows=[43],  # the FORTRANesque column widths\n",
+        "    dtype={'site_no': str}\n",
         ")\n",
         "print(\"Total\", len(floc))\n",
         "floc.drop_duplicates(subset=['dec_lat_va', 'dec_long_va', 'agency_cd', 'site_no'], inplace=True)\n",
@@ -868,28 +870,56 @@
         "    crs = {'init' :'epsg:4326'},\n",
         ")\n",
         "flocblobs.geometry = flocblobs.geometry.to_crs(5071).buffer(50)\n",
+        "# flocblobs['site_id'] = flocblobs.agency_cd + '-' + flocblobs.site_no\n",
+        "# because geopandas.overlay seems to change site_no to float\n",
         "\n",
         "intersect = geopandas.overlay(locblobs, flocblobs, how='identity')\n",
+        "\n",
+        "floc.site_no.dtype\n",
+        "flocblobs.site_no.dtype\n",
+        "intersect.site_no.dtype\n",
+        "# intersect.site_id.dtype\n",
         "\n",
         "\n",
         "lint = len(intersect)\n",
         "intersect = intersect[intersect.site_no.astype(str) != 'nan']\n",
         "print(\"Dropped %d NaN intersections\" % (lint-len(intersect)))\n",
         "\n",
-        "# make a dict of site: (set of intersecting sites)\n",
+        "# make a dict of site: (set of intersecting flow data)\n",
         "sets = {}\n",
         "for inter in intersect.itertuples():\n",
         "    site_1 = str(inter.site)\n",
-        "    site_2 = \"%s-%s\" % (inter.agency_cd, int(inter.site_no))\n",
+        "    site_2 = \"%s-%s\" % (inter.agency_cd, inter.site_no)\n",
         "    sets.setdefault(site_1, set()).add(site_2)\n",
         "    # sets.setdefault(site_2, set()).add(site_1)\n",
         "# pick the lowest (alphabetically) site as the name for intersecting sites\n",
         "# sites = {min(i):i for i in sets.values()}\n",
         "# sites = {(k+\"_X\" if len(v) > 1 else k):v for k, v in sites.items()}\n",
-        "[{k:v} for k,v in sets.items()  if len(v) > 1]\n",
+        "[{k:v} for k,v in sets.items() if len(v) > 1]\n",
         "toget = set()\n",
         "for flows in sets.values():\n",
         "    toget.update(flows)\n",
+        "\n",
+        "for flow in toget:\n",
+        "    flow = flow.replace(\"USGS-\", \"\")\n",
+        "    # if flow != \"04249000\":\n",
+        "    #     continue\n",
+        "    query = dict(\n",
+        "        format=\"json\",\n",
+        "        indent=\"off\",\n",
+        "        sites=flow,\n",
+        "        startDT=\"2000-01-01\",\n",
+        "        endDT=\"2019-07-10\",\n",
+        "        parameterCd=\"00060\",  # ft3/s\n",
+        "    )\n",
+        "    jsonfile = wq.get_data(query, 'flow')\n",
+        "    data = json.load(open(jsonfile))\n",
+        "    data = data['value']['timeSeries']\n",
+        "    if data:\n",
+        "        data = data[0]['values']\n",
+        "        assert len(data) == 1, len(data)\n",
+        "        data = data[0]['value']\n",
+        "        print(flow, len(data))\n",
         "\n",
         "\n"
       ],
