counts flow values

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -838,7 +838,8 @@
       "metadata": {
         "id": "4UAswFxzwcHd",
         "colab_type": "code",
-        "colab": {}
+        "colab": {},
+        "collapsed": true
       },
       "source": [
         "# Plot the Mercury Deposition Network Sites on an Interactive Map\n",
@@ -900,6 +901,7 @@
         "for flows in sets.values():\n",
         "    toget.update(flows)\n",
         "\n",
+        "flows = {}    \n",
         "for flow in toget:\n",
         "    flow = flow.replace(\"USGS-\", \"\")\n",
         "    # if flow != \"04249000\":\n",
@@ -920,8 +922,46 @@
         "        assert len(data) == 1, len(data)\n",
         "        data = data[0]['value']\n",
         "        print(flow, len(data))\n",
+        "        flows[flow] = [(i['dateTime'], float(i['value'])) for i in data]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_jMbPGCekgzA",
+        "colab_type": "code",
+        "colab": {},
+        "collapsed": true
+      },
+      "source": [
         "\n",
-        "\n"
+        "locs['sFlow'] = None\n",
+        "locs['eFlow'] = None\n",
+        "locs['cFlow'] = None\n",
+        "for loc in locs.itertuples():\n",
+        "    if not loc.count:\n",
+        "        continue\n",
+        "    if loc.site not in sets:\n",
+        "        print(loc.site, \"no flow data source found\")\n",
+        "        continue\n",
+        "    flow = loc.site.replace(\"USGS-\", \"\")\n",
+        "    if flow not in flows:\n",
+        "        print(loc.site, \"no flow data found\")\n",
+        "        continue\n",
+        "    print(\"Populating\", loc.site)\n",
+        "    for src in sets[loc.site]:\n",
+        "        if loc.sFlow:\n",
+        "            print(\"Overwriting data for\", loc.site)\n",
+        "        flow = src.replace(\"USGS-\", \"\")\n",
+        "        locs.loc[loc.Index, 'sFlow'] = min(i[0] for i in flows[flow])\n",
+        "        locs.loc[loc.Index, 'eFlow'] = max(i[0] for i in flows[flow])\n",
+        "        locs.loc[loc.Index, 'cFlow'] = len(flows[flow])\n",
+        "        # print(len(flows[flow]), 'for', locs.site)\n",
+        "locs.to_csv(\"locs.csv\")\n",
+        "sets['USGS-431510077363501']\n",
+        "flows['431510077363501']"
       ],
       "execution_count": 0,
       "outputs": []
