WIP resolving missing data

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -134,7 +134,7 @@
         "import sys\n",
         "if BASE not in sys.path:\n",
         "    sys.path.append(str(BASE))\n",
-        "from get_wqdata import GetWQData\n",
+        "from get_wqdata import GetWQData, WQ_API_URL\n",
         "\n",
         "wq = GetWQData()"
       ],
@@ -915,6 +915,7 @@
         "        parameterCd=\"00060\",  # ft3/s\n",
         "    )\n",
         "    jsonfile = wq.get_data(query, 'flow')\n",
+        "    print(WQ_API_URL['flow']+'?'+'&'.join(\"%s=%s\" % (k, v) for k, v in query.items() if not k.startswith('_')))\n",
         "    data = json.load(open(jsonfile))\n",
         "    data = data['value']['timeSeries']\n",
         "    if data:\n",
@@ -922,7 +923,9 @@
         "        assert len(data) == 1, len(data)\n",
         "        data = data[0]['value']\n",
         "        print(flow, len(data))\n",
-        "        flows[flow] = [(i['dateTime'], float(i['value'])) for i in data]"
+        "        flows[flow] = [(i['dateTime'], float(i['value'])) for i in data]\n",
+        "        \n",
+        "flows['431510077363501']"
       ],
       "execution_count": 0,
       "outputs": []
