check for unsaved changes

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -838,8 +838,7 @@
       "metadata": {
         "id": "4UAswFxzwcHd",
         "colab_type": "code",
-        "colab": {},
-        "collapsed": true
+        "colab": {}
       },
       "source": [
         "# Plot the Mercury Deposition Network Sites on an Interactive Map\n",
@@ -935,8 +934,7 @@
       "metadata": {
         "id": "_jMbPGCekgzA",
         "colab_type": "code",
-        "colab": {},
-        "collapsed": true
+        "colab": {}
       },
       "source": [
         "\n",
