formed calib data

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -1126,6 +1126,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def start_end_date(s, e):\n",
+    "    \"\"\"Calculate midpoint time from start and end\"\"\"\n",
+    "    s = parse(s)\n",
+    "    try:\n",
+    "        e = parse(e)\n",
+    "    except AttributeError:  # when parse() gets a NaN from pandas\n",
+    "        e = s\n",
+    "    return s + (e - s) / 2  # midpoint from adding half timedelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdata['date'] = [\n",
+    "    start_end_date(i.ActivityStartDate, i.ActivityEndDate).date()\n",
+    "    for i in pdata.itertuples()\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first, collect actual flow observations by site\n",
     "flow_itrp = {}\n",
     "for row in locs.itertuples():\n",
     "    site = row.site\n",
@@ -1133,15 +1162,9 @@
     "    for flow in pdata[pdata.site == site].itertuples():\n",
     "        if np.isnan(flow.flow):\n",
     "            continue\n",
-    "        # find midpoint of dates by adding half timedelta\n",
-    "        s = parse(flow.ActivityStartDate)\n",
-    "        try:\n",
-    "            e = parse(flow.ActivityEndDate)\n",
-    "        except AttributeError:  # when parse() gets a NaN from pandas\n",
-    "            e = s\n",
-    "        s = s + (e - s) / 2\n",
-    "        flow_obs.append((s.date(), flow.flow, 'pflow'))\n",
-    "    for flow in flows.get(site, []):\n",
+    "        s = flow.date\n",
+    "        flow_obs.append((s, flow.flow, 'pflow'))\n",
+    "    for flow in flows.get(site.replace(\"USGS-\", \"\"), []):\n",
     "        try:\n",
     "            f = float(flow[1])\n",
     "        except ValueError:\n",
@@ -1150,11 +1173,23 @@
     "            continue\n",
     "        src = 'daily' if 'T' in flow[0] else 'TSV'\n",
     "        flow_obs.append((parse(flow[0]).date(), f, src))\n",
-    "    flow_obs.sort()\n",
-    "    if not flow_obs:\n",
-    "        continue\n",
-    "    res = flow_itrp[site] = []\n",
-    "    max_interp = 10  # days\n",
+    "    if flow_obs:\n",
+    "        flow_obs.sort()\n",
+    "        flow_itrp[site] = flow_obs\n",
+    "# [i for i in flow_itrp['USGS-04232050'] if i[0].year == 2016 and i[0].month == 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# then interpolate these actual observation lists\n",
+    "max_interp = 10  # days\n",
+    "for site in flow_itrp:\n",
+    "    flow_obs = flow_itrp[site]\n",
+    "    res = []\n",
     "    i = 0\n",
     "    while i < len(flow_obs) - 1:\n",
     "        tsep = (flow_obs[i+1][0] - flow_obs[i][0]).days\n",
@@ -1172,7 +1207,8 @@
     "            date += timedelta(days=1)\n",
     "        i += 1\n",
     "        while i < len(flow_obs) - 2 and date == flow_obs[i+1][0]:\n",
-    "            i += 1"
+    "            i += 1\n",
+    "    flow_itrp[site] = res"
    ]
   },
   {
@@ -1182,7 +1218,79 @@
    "outputs": [],
    "source": [
     "# sites where interpolation occured\n",
-    "[k for k, v in flow_itrp.items() if any(i[2] for i in v)]"
+    "' '.join([k for k, v in flow_itrp.items() if any(i[2] > 0 for i in v)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = len(flow_itrp)\n",
+    "flow_itrp = {k:v for k, v in flow_itrp.items() if len(v) >= 20}\n",
+    "print(\"Dropped %d sites < 20 flow obs.\" % (n-len(flow_itrp)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddropped = 0\n",
+    "fdropped = 0\n",
+    "\n",
+    "for site in flow_itrp:\n",
+    "    calobs = []\n",
+    "    sitep = pdata[pdata.site == site].copy()\n",
+    "    # sitep['date'] = [\n",
+    "    #     start_end_date(i.ActivityStartDate, i.ActivityEndDate)\n",
+    "    #     for i in sitep.itertuples()\n",
+    "    # ]\n",
+    "    n = len(sitep)\n",
+    "    sitep.drop_duplicates(subset=['date'], inplace=True)\n",
+    "    n -= len(sitep)\n",
+    "    if n:\n",
+    "        print(\"Dropped %s %d obs. on repeated dates\" % (site, n))\n",
+    "        ddropped += n\n",
+    "    flow = {i[0]:i[1] for i in flow_itrp.get(site, [])}\n",
+    "    sitep['iflow'] = [flow.get(i, np.NaN) for i in sitep.date]\n",
+    "    n = len(sitep)\n",
+    "    sitep = sitep[~np.isnan(sitep.iflow)]\n",
+    "    n -= len(sitep)\n",
+    "    if n:\n",
+    "        print(\"Dropped %s %d obs. for no flow data\" % (site, n))\n",
+    "        fdropped += n\n",
+    "print(\"Dropped %d obs. on repeated dates\" % ddropped)\n",
+    "print(\"Dropped %d P obs. with no flow\" % fdropped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[i for i in flow_itrp['USGS-04232050'] if i[0].year == 2016 and i[0].month == 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[i for i in flows['04232050'] if '2016-06-13' in i[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parse('2016-06-13T00:00:00.000')"
    ]
   }
  ],
